Fix table width on mobile devices.

--- a/html-book/reference/common/site_modules.css
+++ b/html-book/reference/common/site_modules.css
@@ -1784,9 +1784,8 @@ div#cpp-content-base {
 }
 
 div#content {
-	width: 75%;
+	width: 80%;
 	margin: auto;
-	position: static;
 }
 
 html,
